--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,9 +24,11 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-table": "^8.20.5",
+    "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.33.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
