Added prisma && Removed supabase

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^db:generate", "^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
@@ -11,8 +11,36 @@
       "dependsOn": ["^lint"]
     },
     "dev": {
+      "dependsOn": ["^db:generate"],
       "cache": false,
       "persistent": true
+    },
+    "db:generate": {
+      "cache": false
+    },
+    "db:studio": {
+      "cache": false,
+      "env": ["DATABASE_URL", "DIRECT_DATABASE_URL"]
+    },
+    "db:push": {
+      "dependsOn": ["^db:generate"],
+      "env": ["DATABASE_URL", "DIRECT_DATABASE_URL"],
+      "cache": false
+    },
+    "db:migrate:deploy": {
+      "dependsOn": ["^db:generate"],
+      "env": ["DATABASE_URL", "DIRECT_DATABASE_URL"],
+      "cache": false
+    },
+    "db:migrate:dev": {
+      "dependsOn": ["^db:generate"],
+      "env": ["DATABASE_URL", "DIRECT_DATABASE_URL"],
+      "cache": false
+    },
+    "db:migrate:vercel": {
+      "dependsOn": ["^db:generate"],
+      "env": ["DATABASE_URL", "DIRECT_DATABASE_URL"],
+      "cache": false
     }
   }
 }
