--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "concurrently --kill-others \"next dev --turbo\" \"turbo run db:studio --filter=db\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -21,13 +22,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-table": "^8.20.5",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "db": "workspace:*",
     "drizzle-orm": "^0.33.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
@@ -42,15 +42,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.19.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.43",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
